@@ -1,3 +1,8 @@
+2002-05-03  Dan Winship  <danw@ximian.com>
+
+	* src/libsoup/soup-context.c (soup_context_uri_hash,
+	soup_context_uri_equal): NULL and "" are different. (23555)
+
 2002-05-03  Joe Shaw  <joe@ximian.com>
 
 	* src/*.[ch]: Prefix the libxml includes with the libxml/ path.
